# funny-ahh

./: Cargo.toml  README.md
src/: main.rs  sas.rs  text.json
templates/: index.html.hbs
