[package]
name = "funny-ahh"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rocket = "0.5.1"
serde = "1.0.207"
serde_json = "1.0.125"
shuttle-rocket = "0.47.0"
shuttle-runtime = "0.47.0"
tokio = { version="1", features=["full"] }

[dependencies.rocket_dyn_templates]
version = "*"
features = ["handlebars"]
